--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,12 +2,31 @@ server {
 	server_name test.qobo.biz;
 	root /var/www/html/test.qobo.biz;
 
-	include /etc/nginx/restrictions.conf;
+	access_log /var/log/nginx/test.qobo.biz-access.log;
+	error_log /var/log/nginx/test.qobo.biz-error.log;
+
+	# Enable gzip compression
+	gzip on;
+	gzip_disable "msie6";
+
+	# Disable all methods besides HEAD, GET, and POST
+	if ($request_method !~ ^(GET|HEAD|POST)$) {
+		return 444;
+	}
+
+	# Deny all attempts to access hidden files such as .htaccess and .git
+	location ~ /\. { deny all; }
+
+	# Deny all attempts to access composer files
+	location = /composer.json { deny all; }
+	location = /composer.lock { deny all; }
+	location ~ /vendor\/ { deny all; }
 
 	location / {
 		try_files $uri $uri/ =404;
 	}
 
+	# PHP
 	location ~ \.php$ {
 		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 		if (!-f $document_root$fastcgi_script_name) {
