Updated nginx.conf with more restrictions

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -22,6 +22,13 @@ server {
 	location = /composer.lock { deny all; }
 	location ~ /vendor\/ { deny all; }
 
+	# Deny all attempts to access template-project files
+	location ~ /etc\/ { deny all; }
+	location ~ /src\/ { deny all; }
+	location ~ /tests\/ { deny all; }
+	location = /Phakefile { deny all; }
+	location = /README.md { deny all; }
+
 	location / {
 		try_files $uri $uri/ =404;
 	}
